[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/signal/SignalWaveformTexture.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/signal/WaveformArrow.png" type="Texture" id=2]
[ext_resource path="res://world/puzzles/noise_canceling/waves/Waveform.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Calculator_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/sprites/signal/WaveformArrow_disabled.png" type="Texture" id=5]

[node name="Waveform" type="Node2D"]
script = ExtResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 782.656, 262.528 )
width = 8.0
default_color = Color( 0, 1, 0, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2

[node name="UpFqButton" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = -140.0
margin_right = 806.0
margin_bottom = 116.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 128, 128 )
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownFqButton" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = -110.0
margin_right = 806.0
margin_bottom = 146.0
rect_rotation = 180.0
rect_scale = Vector2( 0.15, 0.15 )
rect_pivot_offset = Vector2( 128, 128 )
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueLabel" type="Label" parent="."]
margin_left = 699.0
margin_top = -19.0
margin_right = 738.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "2"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FqLabel" type="Label" parent="."]
margin_left = 743.0
margin_top = -20.0
margin_right = 779.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "hz"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
